--- a/rh/publico/css/home.css
+++ b/rh/publico/css/home.css
@@ -8307,6 +8307,23 @@
         background: linear-gradient(#408c99, #599bb3);
       }
                     
+  .imagem-usuario{
+    height: 80px;
+  }
   
+  .previous, .next {
+    text-decoration: none;
+    display: inline-block;
+    padding: 6px 12px;
+    background-color: #f1f1f1;
+    color: black;
+    font-size: 25px;
+  }
+  
+  .previous:hover, .next:hover{
+    background-color: #ddd;
+    color: black;
+  }
+
                 
   
